--- a/index.html
+++ b/index.html
@@ -22,8 +22,23 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Jonathan Odom</h1>
 						<p>Software Engineer<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</header>
+						<ul>
+							<li>
+								<a href="https://www.linkedin.com/in/jonathan-odom/" target="_blank" class="icon brands fa-linkedin alt"><span
+										class="label">LinkedIn</span></a>
+							</li>
+							<li>
+								<a href="https://github.com/odomj5" target="_blank" class="icon brands fa-github alt"><span
+										class="label">GitHub</span></a>
+							</li>
+							<li>
+								<a href="https://angel.co/u/jonathan-odom" target="_blank" class="icon brands fa-angellist alt"><span
+										class="label">AngelList</span></a>
+							</li>
+							<li>
+								<a href="mailto:odomj5@gmail.com" class="icon fa-envelope alt"><span class="label">Email</span></a>
+							</li>
+						</ul>
 
 				<!-- Nav -->
 					<nav id="nav">
