--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="images/JO-Logo-600x350.jpg" alt="" /></span>
 						<h1>Jonathan Odom</h1>
 						<p>Software Engineer<br />
 						<ul>
