--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jonathan Odom</title>
+		<title>Stellar by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,26 +19,11 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/JO-Logo-600x350.jpg" alt="" /></span>
-						<h1>Jonathan Odom</h1>
-						<p>Software Engineer<br />
-						<ul>
-							<li>
-								<a href="https://www.linkedin.com/in/jonathan-odom/" target="_blank" class="icon brands fa-linkedin alt"><span
-										class="label">LinkedIn</span></a>
-							</li>
-							<li>
-								<a href="https://github.com/odomj5" target="_blank" class="icon brands fa-github alt"><span
-										class="label">GitHub</span></a>
-							</li>
-							<li>
-								<a href="https://angel.co/u/jonathan-odom" target="_blank" class="icon brands fa-angellist alt"><span
-										class="label">AngelList</span></a>
-							</li>
-							<li>
-								<a href="mailto:odomj5@gmail.com" class="icon fa-envelope alt"><span class="label">Email</span></a>
-							</li>
-						</ul>
+						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<h1>Stellar</h1>
+						<p>Just another free, fully responsive site template<br />
+						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
