--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Jonathan Odom</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +20,25 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<h1>Jonathan Odom</h1>
+						<h2>Software Engineer</h2>
+						<ul>
+							<li>
+								<a href="https://www.linkedin.com/in/jonathan-odom/" target="_blank" class="icon brands fa-linkedin alt"><span
+										class="label">LinkedIn</span></a>
+							</li>
+							<li>
+								<a href="https://github.com/odomj5" target="_blank" class="icon brands fa-github alt"><span
+										class="label">GitHub</span></a>
+							</li>
+							<li>
+								<a href="https://angel.co/u/jonathan-odom" target="_blank" class="icon brands fa-angellist alt"><span
+										class="label">AngelList</span></a>
+							</li>
+							<li>
+								<a href="mailto:odomj5@gmail.com" class="icon fa-envelope alt"><span class="label">Email</span></a>
+							</li>
+						</ul>
 					</header>
 
 				<!-- Nav -->
