Added project images and descriptions

--- a/index.html
+++ b/index.html
@@ -85,23 +85,30 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>My Projects</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href='https://jiator.herokuapp.com/#/'>
+											<img class='proj-img' src="images/jiatorShow.png">
+										</a>
+										<h3>Viator</h3>
+										<p>Viator is a Tour discovery and booking full-stack application that allows users to create accounts, discover activities, book and review tours.  
+										</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href='https://thegameroom100.herokuapp.com/#/'>
+											<img class='proj-img' src="images/gameroom.PNG" >
+										</a>
+										<h3>Theme Chat Room</h3>
+										<p>Role playing live chat rooms with pre-saved themes and roles</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href='https://odomj5.github.io/snake-game/'>
+											<img class='proj-img' src="images/snakehome.png">
+										</a>
+										<h3>Taco Snake</h3>
+										<p>Snake Taco is a 1-player game, insipred by the classic Nokia Snake. The object of the game is to eat as many tacos as possible.</p>
 									</li>
 								</ul>
 								<footer class="major">
