--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/sail3.JPG" alt="" /></span>
 								</div>
 							</section>
 
@@ -90,11 +90,13 @@
 								<ul class="features">
 									<li>
 										<a href='https://jiator.herokuapp.com/#/'>
-											<img class='proj-img' src="images/jiatorShow.png">
+											<img class='proj-img' src="images/indexJiator.png">
 										</a>
 										<h3>Viator</h3>
 										<p>Viator is a Tour discovery and booking full-stack application that allows users to create accounts, discover activities, book and review tours.  
 										</p>
+										<a href="https://jiator.herokuapp.com/#/" target="_blank" class="button">Live</a>
+										<a href="https://github.com/odomj5/Jiator" target="_blank" class="button">GitHub Repo</a>
 									</li>
 									<li>
 										<a href='https://thegameroom100.herokuapp.com/#/'>
@@ -102,6 +104,8 @@
 										</a>
 										<h3>Theme Chat Room</h3>
 										<p>Role playing live chat rooms with pre-saved themes and roles</p>
+										<a href="https://thegameroom100.herokuapp.com/#/" target="_blank" class="button">Live</a>
+										<a href="https://github.com/uranussg/mern-project" target="_blank" class="button">GitHub Repo</a>
 									</li>
 									<li>
 										<a href='https://odomj5.github.io/snake-game/'>
@@ -109,56 +113,75 @@
 										</a>
 										<h3>Taco Snake</h3>
 										<p>Snake Taco is a 1-player game, insipred by the classic Nokia Snake. The object of the game is to eat as many tacos as possible.</p>
+										<a href="https://odomj5.github.io/snake-game/" target="_blank" class="button">Live</a>
+										<a href="https://github.com/odomj5/snake-game" target="_blank" class="button">GitHub Repo</a>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+							
 							</section>
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Skills</h2>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+								<ul class="skills">
+									<li>
+										<img src="images/logos/javascript-original.svg">
+										<p>JavaScript</p>
 									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+									<li>
+										<img src="images/logos/react-original-wordmark.svg">
+										<p>React.js</p>
 									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+									<li>
+										<img src="images/logos/ruby-plain-wordmark.svg">
+										<p>Ruby</p>
 									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+									<li>
+										<img src="images/logos/rails-plain-wordmark.svg">
+										<p>Rails</p>
 									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+									<li>
+										<img src="images/logos/nodejs-original-wordmark.svg">
+										<p>Node.js</p>
+									</li>
+									<li>
+										<img src="images/logos/express-original-wordmark.svg">
+										<p>Express.js</p>
+									</li>
+									<li>
+										<img src="images/logos/mongodb-original-wordmark.svg">
+										<p>MongoDB</p>
+									</li>
+									<li>
+										<img src="images/logos/postgresql-original-wordmark.svg">
+										<p>PostgreSQL</p>
+									</li>
+									<li>
+										<img src="images/logos/html5-original-wordmark.svg">
+										<p>HTML5</p>
+									</li>
+									<li>
+										<img src="images/logos/css3-original-wordmark.svg">
+										<p>CSS3</p>
+									</li>
+									<li>
+										<img src="images/logos/jquery-original-wordmark.svg">
+										<p>jQuery</p>
+									</li>
+									<li>
+										<img src="images/logos/git-original-wordmark.svg">
+										<p>Git</p>
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+								
 							</section>
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
+									<h2>Contact</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
