Finished footer icons

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
 										
 										As a full stack software developer, I have enjoyed using Ruby, JavaScript, React/Redux, Ruby on Rails, PostgreSQL, CSS
 										and HTML in my projects. I’m planning on learning Python next and strengthening my skill set in Express and Node.js.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+									
 									</div>
 									<span class="image"><img src="images/sail3.JPG" alt="" /></span>
 								</div>
@@ -227,7 +225,7 @@
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</section> -->
-						<section>
+						<!-- <section> -->
 							<!-- <h2>Etiam feugiat</h2>
 							<dl class="alt">
 								<dt>Address</dt>
@@ -237,15 +235,32 @@
 								<dt>Email</dt>
 								<dd><a href="#">information@untitled.tld</a></dd>
 							</dl> -->
-							<ul class="icons">
+							<!-- <ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+							</ul> -->
+							<ul>
+								<li>
+									<a href="https://www.linkedin.com/in/jonathan-odom/" target="_blank" class="icon brands fa-linkedin alt"><span
+											class="label">LinkedIn</span></a>
+								</li>
+								<li>
+									<a href="https://github.com/odomj5" target="_blank" class="icon brands fa-github alt"><span
+											class="label">GitHub</span></a>
+								</li>
+								<li>
+									<a href="https://angel.co/u/jonathan-odom" target="_blank" class="icon brands fa-angellist alt"><span
+											class="label">AngelList</span></a>
+								</li>
+								<li>
+									<a href="mailto:odomj5@gmail.com" class="icon fa-envelope alt"><span class="label">Email</span></a>
+								</li>
 							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<!-- </section> -->
+						<p class="copyright">&copy; 2020 Jonathan Odom. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
